--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "concat-stream": "^1.0.0",
     "through2": "~0.5.1",
     "trumpet": "^1.6.4",
-    "ent": "^2.0.0"
+    "ent": "^2.0.0",
+    "utf8-stream": "~0.0.0",
+    "stream-combiner2": "~1.0.1"
   },
   "devDependencies": {
     "through": "~2.3.4",
